<?xml version="1.0" encoding="utf-8"?>
<!--    ====================================================================================-->

<!--    Full Name : E.M.G.S.S.B. Dehideniya-->
<!--    IIT ID    : 20200731-->
<!--    UoW ID    : w1869873-->

<!--    I confirm that I understand what plagiarism is and have read and understood the section on-->
<!--    Assessment Offences in the Essential Information for Students.-->
<!--    The work that I have submitted is entirely my own.-->
<!--    Any work from other authors is duly referenced and acknowledged.-->

<!--    ====================================================================================-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_black"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/tvGameOver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/custom_white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:text="The winner is " />

    <ImageView
        android:id="@+id/player_dice_1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:background="#00000000"
        android:contentDescription="@string/description_DiceImage"
        app:layout_constraintBottom_toTopOf="@+id/player_dice_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:srcCompat="@drawable/dice1" />

    <ImageView
        android:id="@+id/player_dice_2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#00000000"
        android:contentDescription="@string/description_DiceImage"
        app:layout_constraintBottom_toTopOf="@+id/player_dice_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_dice_1"
        app:srcCompat="@drawable/dice1" />

    <ImageView
        android:id="@+id/player_dice_3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#00000000"
        android:contentDescription="@string/description_DiceImage"
        app:layout_constraintBottom_toTopOf="@+id/player_dice_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_dice_2"
        app:srcCompat="@drawable/dice1" />

    <ImageView
        android:id="@+id/player_dice_4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#00000000"
        android:contentDescription="@string/description_DiceImage"
        app:layout_constraintBottom_toTopOf="@+id/player_dice_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_dice_3"
        app:srcCompat="@drawable/dice1" />

    <ImageView
        android:id="@+id/player_dice_5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#00000000"
        android:contentDescription="@string/description_DiceImage"
        app:layout_constraintBottom_toTopOf="@+id/throwButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_dice_4"
        app:srcCompat="@drawable/dice1" />

    <ImageView
        android:id="@+id/computer_dice_1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="18dp"
        android:background="#00000000"
        android:contentDescription="@string/description_DiceImage"
        app:layout_constraintBottom_toTopOf="@+id/computer_dice_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:srcCompat="@drawable/dice1" />

    <ImageView
        android:id="@+id/computer_dice_5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="8dp"
        android:background="#00000000"
        android:contentDescription="@string/description_DiceImage"
        app:layout_constraintBottom_toTopOf="@+id/scoreButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/computer_dice_4"
        app:srcCompat="@drawable/dice1" />

    <ImageView
        android:id="@+id/computer_dice_2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="8dp"
        android:background="#00000000"
        android:contentDescription="@string/description_DiceImage"
        app:layout_constraintBottom_toTopOf="@+id/computer_dice_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/computer_dice_1"
        app:srcCompat="@drawable/dice1" />

    <ImageView
        android:id="@+id/computer_dice_3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="8dp"
        android:background="#00000000"
        android:contentDescription="@string/description_DiceImage"
        app:layout_constraintBottom_toTopOf="@+id/computer_dice_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/computer_dice_2"
        app:srcCompat="@drawable/dice1" />

    <ImageView
        android:id="@+id/computer_dice_4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="8dp"
        android:background="#00000000"
        android:contentDescription="@string/description_DiceImage"
        app:layout_constraintBottom_toTopOf="@+id/computer_dice_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/computer_dice_3"
        app:srcCompat="@drawable/dice1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/custom_white"
        app:cardCornerRadius="6dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lbGamePoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@string/game_point"
                android:textColor="@color/custom_black_top"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/lbPlayerB"
                app:layout_constraintStart_toEndOf="@+id/lbPlayerA2"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Game Point" />

            <TextView
                android:id="@+id/tvGamePoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/game_point_default"
                android:textColor="@color/custom_black_top"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/lbGamePoint"
                app:layout_constraintStart_toStartOf="@+id/lbGamePoint"
                app:layout_constraintTop_toBottomOf="@+id/lbGamePoint"
                tools:text="101" />

            <TextView
                android:id="@+id/lbPlayerA2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@string/player"
                android:textColor="@color/custom_black_top"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/lbGamePoint"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvGamePointPlayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/game_point_a"
                android:textColor="@color/custom_black_top"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/lbPlayerA2"
                app:layout_constraintHorizontal_bias="0.631"
                app:layout_constraintStart_toStartOf="@+id/lbPlayerA2"
                app:layout_constraintTop_toBottomOf="@+id/lbPlayerA2"
                app:layout_constraintVertical_bias="0.0"
                tools:text="0" />

            <TextView
                android:id="@+id/lbPlayerB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@string/computer"
                android:textColor="@color/custom_black_top"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/lbGamePoint"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvGamePointComputer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/game_point_b"
                android:textColor="@color/custom_black_top"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/lbPlayerB"
                app:layout_constraintStart_toStartOf="@+id/lbPlayerB"
                app:layout_constraintTop_toBottomOf="@+id/lbPlayerB"
                tools:text="0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/throwButton"
        android:layout_width="150dp"
        android:layout_height="62dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_color_by_states"
        android:text="@string/throwButton"
        android:textColor="@color/custom_white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/scoreButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/scoreButton"
        android:layout_width="150dp"
        android:layout_height="62dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_color_by_states"
        android:text="@string/scoreButton"
        android:textColor="@color/custom_white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/throwButton" />

    <TextView
        android:id="@+id/tvVsTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/vsTag"
        android:textColor="@color/custom_white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/computer_dice_3"
        app:layout_constraintStart_toEndOf="@+id/player_dice_3"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.42000002"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/human_title"
        android:textColor="@color/custom_white"
        app:layout_constraintBottom_toTopOf="@+id/tvGameOver"
        app:layout_constraintStart_toEndOf="@+id/player_dice_1"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/computer_title"
        android:textColor="@color/custom_white"
        app:layout_constraintBottom_toTopOf="@+id/tvGameOver"
        app:layout_constraintEnd_toStartOf="@+id/computer_dice_1"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/computerWins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:textColor="@color/custom_white"
        app:layout_constraintBottom_toTopOf="@+id/tvGameOver"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.504"
        tools:text="0" />

    <TextView
        android:id="@+id/humanWins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textColor="@color/custom_white"
        app:layout_constraintBottom_toTopOf="@+id/tvGameOver"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.504"
        tools:text="0" />

</androidx.constraintlayout.widget.ConstraintLayout>